Fixed spacing on home carousel default state.

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -123,6 +123,10 @@
     cursor: pointer;
 }*/
 
+.home-portfolio-carousel .btn {
+    line-height: inherit;
+    font-size: inherit;
+}
 
 /* testimonial carousel */
 
